--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "kt",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://KRITARTH56.github.io/page2slide1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -17,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
