--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://KRITARTH56.github.io/page1slide1firstpage",
+  "homepage": "http://KRITARTH56.github.io/page1slide2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
